🔧 Add SEO redirects to vercel.json while preserving SPA routing
- Add sitemap.xml redirect to backend
- Add robots.txt redirect to backend
- Preserve existing SPA rewrites for React routing
- Add proper content-type headers for SEO files

Vercel Configuration:
✅ /sitemap.xml → backend redirect
✅ /robots.txt → backend redirect
✅ SPA routing preserved for React app
✅ Proper content-type headers for SEO

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,40 @@
 {
+  "redirects": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "https://ageofgenz-backend.onrender.com/sitemap.xml",
+      "permanent": true
+    },
+    {
+      "source": "/robots.txt", 
+      "destination": "https://ageofgenz-backend.onrender.com/robots.txt",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        }
+      ]
+    },
+    {
+      "source": "/robots.txt",
+      "headers": [
+        {
+          "key": "Content-Type", 
+          "value": "text/plain"
+        }
+      ]
     }
   ]
 }
