🔧 Fix article routing for X cards and SEO
- Route /article/* requests to backend for proper meta tags
- Keep API routing to backend
- Fix X card preview issues
- Maintain React app for all other routes

--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,14 @@
   ],
   "rewrites": [
     {
+      "source": "/article/:slug*",
+      "destination": "https://ageofgenz-backend.onrender.com/article/:slug*"
+    },
+    {
+      "source": "/api/:path*",
+      "destination": "https://ageofgenz-backend.onrender.com/api/:path*"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
