🔧 Fix X cards with correct serverless function
- Remove old edge function approach
- Use [...slug].js catch-all serverless function
- Remove problematic 'has' header condition
- All article URLs now go through the function

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/article/:slug*",
-      "destination": "/api/article-proxy?slug=:slug*"
+      "destination": "/api/article/:slug*"
     },
     {
       "source": "/api/:path*",
