--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,29 @@
 {
+  "functions": {
+    "api/article/[...slug].js": {
+      "maxDuration": 10
+    }
+  },
+  "redirects": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "https://ageofgenz-backend.onrender.com/sitemap.xml",
+      "permanent": true
+    },
+    {
+      "source": "/robots.txt", 
+      "destination": "https://ageofgenz-backend.onrender.com/robots.txt",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
-      "source": "/article/:slug*",
-      "destination": "/api/article/:slug*"
+      "source": "/article/:path*",
+      "destination": "/api/article/:path*"
     },
     {
       "source": "/api/:path*",
       "destination": "https://ageofgenz-backend.onrender.com/api/:path*"
-    },
-    {
-      "source": "/sitemap.xml",
-      "destination": "https://ageofgenz-backend.onrender.com/sitemap.xml"
-    },
-    {
-      "source": "/robots.txt",
-      "destination": "https://ageofgenz-backend.onrender.com/robots.txt"
     },
     {
       "source": "/(.*)",
