refactor article handling across app
- Update API proxy and utilities
- Modify App, ArticleCard, Header components
- Update ArticleDetail, Category, Home pages
- Add article helpers utility
- Update type definitions and Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "redirects": [
     {
+      "source": "/article/:slug",
+      "destination": "/articles/:slug",
+      "permanent": true
+    },
+    {
       "source": "/sitemap.xml",
       "destination": "https://ageofgenz-backend.onrender.com/sitemap.xml",
       "permanent": true
@@ -13,7 +18,7 @@
   ],
   "rewrites": [
     {
-      "source": "/article/:slug",
+      "source": "/articles/:slug",
       "destination": "/api/article-proxy?slug=:slug"
     },
     {
@@ -27,7 +32,7 @@
   ],
   "headers": [
     {
-      "source": "/article/:path*",
+      "source": "/articles/:path*",
       "headers": [
         {
           "key": "Cache-Control",
