--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
       "source": "/:path*",
       "destination": "https://theageofgenz.com/:path*",
       "permanent": true,
+      "statusCode": 308,
       "has": [
         {
           "type": "host",
