chore: split env files for dev and prod

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-# Development
-VITE_API_URL=http://localhost:8000
-
-# Production will be set by Vercel
+# Local overrides only. Use .env.development and .env.production for defaults.
