--- a/vercel.json
+++ b/vercel.json
@@ -108,6 +108,15 @@
           "value": "text/plain"
         }
       ]
+    },
+    {
+      "source": "/rss.xml",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, s-maxage=3600, max-age=300, stale-while-revalidate=86400"
+        }
+      ]
     }
   ],
   "functions": {
